# ai-herness-engineering

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
docs/adr/: 0001-langgraph-orchestration.md  0002-push-streaming.md  0003-patch-based-edits.md  0004-sandbox-tiers.md  0005-dependency-graph-planning.md  0006-github-pr-creation.md  0007-retention-policy.md  0008-state-store-as-source-of-truth.md
dummy-repos/node-api-sample/: README.md  package.json
dummy-repos/python-api-sample/: README.md
infra/: Dockerfile  Dockerfile.sandbox  docker-compose.test.yml  docker-compose.yml
infra/k8s/: api.yaml  cleanup-cronjob.yaml  postgres.yaml  redis.yaml  runtimeclass-gvisor.yaml  sandbox-networkpolicy.yaml  worker.yaml
src/: __init__.py  config.py  events.py  main.py  queue.py  retention.py  worker.py
src/analysis/: __init__.py  dep_graph.py
src/api/: __init__.py  server.py
src/git/: __init__.py  github.py  repo_manager.py
src/llm/: __init__.py  client.py  prompts.py
src/orchestrator/: __init__.py  executor.py  graph.py  planner.py  state_machine.py  states.py  verifier.py
src/sandbox/: __init__.py  base.py  docker_runner.py  file_tools.py  k8s_runner.py  local_runner.py
src/storage/: __init__.py  db.py  models.py
src/telemetry/: __init__.py  tracing.py
tests/: conftest.py  test_dep_graph.py  test_executor_patches.py  test_github_pr.py  test_k8s_sandbox.py  test_langgraph_engine.py  test_orchestrator.py  test_retention.py  test_sandbox_hardening.py  test_streaming.py  test_units.py
(+16 files in other folders)
