[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-harness"
version = "0.1.0"
description = "Production-grade autonomous multi-file refactoring agent harness (Planner -> Executor -> Verifier)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
